<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.thatcherbm.wildgingerdinnerdeliverytablet.MainActivity">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- Main image showing a cabin -->
            <ImageView
                android:id="@+id/imgMain"
                android:contentDescription="@string/imgMain"
                android:src="@drawable/wildginger"
                android:layout_height="660dp"
                android:layout_width="210dp" />

            <!-- Table for vertical stacking of fields -->
            <TableLayout
                android:layout_height="wrap_content"
                android:layout_width="1035dp">

                <TableRow>
                    <!-- First row has the Title -->
                    <View android:layout_height="40dp" />

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:gravity="fill_horizontal"
                        android:padding="20dp"
                        android:text="@string/txtTitle"
                        android:textSize="50sp"
                        android:typeface="serif"
                        android:background="#ffe0b2" />
                </TableRow>

                <TableRow>
                    <!-- Second row has a description -->
                    <View android:layout_height="60dp" />
                    <TextView
                        android:id="@+id/txtDescription"
                        android:layout_width="wrap_content"
                        android:layout_gravity="start"
                        android:padding="20dp"
                        android:text="@string/txtDescription"
                        android:textSize="30sp"
                        />
                </TableRow>

                <TableRow>
                    <!-- Third row for the radio buttons to select a cabin type -->
                    <View android:layout_height="70dp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:id="@+id/food" >

                        <TextView
                            android:text="@string/txtZabuton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textZabuton"
                            android:textSize="30sp"
                            android:layout_weight="1"
                            android:textStyle="normal|bold" />

                        <RadioButton
                            android:text="@string/rdZabuton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rdZabuton"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            android:textAllCaps="true"
                            android:checked="true"
                            android:textAlignment="viewStart" />

                        <TextView
                            android:text="@string/txtBaconDog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textBaconDog"
                            android:textSize="30sp"
                            android:layout_weight="1"
                            android:textStyle="normal|bold" />

                        <RadioButton
                            android:text="@string/rdBaconDog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rdBaconDog"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            android:textAllCaps="true" />

                    </RadioGroup>

                </TableRow>

                <TableRow>
                    <!-- Fourth row for the button to open the datepicker -->
                    <View android:layout_height="50dp" />
                    <Button
                        android:id="@+id/btnTime"
                        android:layout_width="wrap_content"
                        android:gravity="fill_horizontal"
                        android:padding="20dp"
                        android:text="@string/btnTime"
                        android:textSize="48sp"
                        android:background="#ffe082" />
                </TableRow>

                <TableRow>
                    <!-- Last row for displaying chosen reservation -->
                    <View android:layout_height="60dp" />
                    <TextView
                        android:id="@+id/txtReservation"
                        android:layout_width="wrap_content"
                        android:layout_gravity="start"
                        android:padding="20dp"
                        android:textSize="35sp"
                        android:gravity="start" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </HorizontalScrollView>

</ScrollView>
